--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,21 @@
 
 /* Tipografía */
 @font-face {
-  font-family: "";
-  src: url("") format("woff2"), url("") format("woff");
+  font-family: "montserratRegular";
+  src: url("../font/montserratalternates-regular.woff2") format("woff2"),
+    url("../font/montserratalternates-regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "montserratBold";
+  src: url("../font/montserratalternates-bold.woff2") format("woff2"),
+    url("../font/montserratalternates-bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "montserratItalic";
+  src: url("../font/montserratalternates-italic.woff2") format("woff2"),
+    url("../font/montserratalternates-italic.woff") format("woff");
 }
 
 /* ******************************** */
@@ -17,3 +30,45 @@
 /* Colores */
 
 /* ******************************** */
+
+html {
+  font-size: 1rem;
+  font-family: montserratRegular, sans-serif;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fafafa;
+}
+
+.container{
+  padding: 0.5rem;
+}
+
+
+  .herrero{
+    display: grid;
+    background-color: #f5acac;
+    padding: 1rem;
+    border-radius: 1rem;
+    
+      & .herrero__content{
+        display: grid;
+        gap: 0.5rem;
+
+        & .herrero__content--img{
+
+        }
+
+        & .herrero__content--nombre{
+
+        }
+
+        & .herrero__content--info{
+          font-size: 1.2rem;
+
+        }
+      }
+}
